--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <title>Audrey Garon</title>
     <link rel="stylesheet" href="https://use.typekit.net/nfa3krv.css">
     <link href="css/index.css" rel="stylesheet" type="text/css" />
+    <link href="css/about.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
     <div class="centered">
