Set about.html as landing page (redirect from index.html)

--- a/index.html
+++ b/index.html
@@ -1,23 +1,11 @@
 <html>
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Audrey Garon</title>
-    <link rel="stylesheet" href="https://use.typekit.net/nfa3krv.css">
-    <link href="css/index.css" rel="stylesheet" type="text/css" />
+    <meta http-equiv="refresh" content="0; url=about.html">
+    <title>Redirecting to About - Audrey Garon</title>
 </head>
 <body>
-   <div class="centered">
-       <h1>Audrey Garon</h1>
-    </div>
-    <div class="menu">
-        <a href="organic-robotics-lab.html">Organic Robotics Lab</a>
-        <a href="mit-csail.html">MIT CSAIL</a>
-        <a href="boston-centerless.html">Boston Centerless</a>
-        <a href="open-design-project.html">Open Design Project</a>
-        <a class="current" href="about.html">About</a>
-    </div>
+    <p>Redirecting to <a href="about.html">About page</a>...</p>
 </body>
-    <div class="profile-section">
         <div class="two-column">
             <picture>
                 <source srcset="img/profile-lg.jpeg" media="(min-width: 768px)">
