--- a/mae3270.html
+++ b/mae3270.html
@@ -2,11 +2,32 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MAE 3270</title>
+  <title>MAE 3270 - Audrey Garon</title>
+  <link rel="stylesheet" href="https://use.typekit.net/nfa3krv.css">
+  <link href="css/index.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body style="margin:0;">
-  <iframe src="assets/MAE-3270-Modified-Torque-Wrench-Design.pdf" style="position:fixed; inset:0; width:100%; height:100%; border:0;" frameborder="0" allowfullscreen></iframe>
+<body>
+  <div class="centered">
+    <h1>Audrey Garon</h1>
+  </div>
+  <div class="menu">
+    <a href="organic-robotics-lab.html">Organic Robotics Lab</a>
+    <a href="mit-csail.html">MIT CSAIL</a>
+    <a href="boston-centerless.html">Boston Centerless</a>
+    <a href="open-design-project.html">Open Design Project</a>
+    <a href="about.html">About</a>
+    <a class="current" href="mae3270.html">MAE 3270</a>
+  </div>
+
+  <main>
+    <div class="row">
+      <div class="image">
+        <iframe src="assets/MAE-3270-Modified-Torque-Wrench-Design.pdf" style="width:100%; height:90vh; border:0;" frameborder="0" allowfullscreen></iframe>
+      </div>
+    </div>
+  </main>
+
 </body>
 
 </html>
