--- a/mae3270.html
+++ b/mae3270.html
@@ -23,7 +23,7 @@
   <main>
     <div class="row">
       <div class="image">
-        <iframe src="assets/MAE-3270-Modified-Torque-Wrench-Design.pdf" style="width:100%; height:90vh; border:0;" frameborder="0" allowfullscreen></iframe>
+        <iframe src="assets/MAE-3270-Modified-Torque-Wrench-Design.pdf" style="display:block; margin:2rem auto; width:80%; height:80vh; border:0;" frameborder="0" allowfullscreen></iframe>
       </div>
     </div>
   </main>
