Center MAE 3270 iframe container with inline flex styles

--- a/mae3270.html
+++ b/mae3270.html
@@ -21,9 +21,9 @@
   </div>
 
   <main>
-    <div class="row">
-      <div class="image">
-        <iframe src="assets/MAE-3270-Modified-Torque-Wrench-Design.pdf" style="display:block; margin:2rem auto; width:80%; height:80vh; border:0;" frameborder="0" allowfullscreen></iframe>
+    <div class="row" style="justify-content:center;">
+      <div class="image" style="max-width:1200px; width:100%; display:flex; justify-content:center; padding:0; background:transparent;">
+        <iframe src="assets/MAE-3270-Modified-Torque-Wrench-Design.pdf" style="display:block; margin:2rem auto; width:90%; max-width:1000px; height:90vh; border:0;" frameborder="0" allowfullscreen></iframe>
       </div>
     </div>
   </main>
