Add MAE 3270 link to project pages and track MAE page

--- a/open-design-project.html
+++ b/open-design-project.html
@@ -16,6 +16,7 @@
         <a href="mit-csail.html">MIT CSAIL</a>
         <a href="boston-centerless.html">Boston Centerless</a>
         <a class="current" href="open-design-project.html">Open Design Project</a>
+        <a href="mae3270.html">MAE 3270</a>
         <a href="about.html">About</a>
     </div>
     <main>
