--- a/organic-robotics-lab.html
+++ b/organic-robotics-lab.html
@@ -16,6 +16,7 @@
         <a href="mit-csail.html">MIT CSAIL</a>
         <a href="boston-centerless.html">Boston Centerless</a>
         <a href="open-design-project.html">Open Design Project</a>
+        <a href="mae3270.html">MAE 3270</a>
         <a href="about.html">About</a>
     </div>
     <main>
