--- a/open-design-project.html
+++ b/open-design-project.html
@@ -17,6 +17,7 @@
         <a href="boston-centerless.html">Boston Centerless</a>
         <a class="current" href="open-design-project.html">Open Design Project</a>
         <a href="mae3270.html">MAE 3270</a>
+        <a href="mae3260.html">MAE 3260</a>
         <a href="about.html">About</a>
     </div>
     <main>
