--- a/mae3270.html
+++ b/mae3270.html
@@ -16,8 +16,9 @@
     <a href="mit-csail.html">MIT CSAIL</a>
     <a href="boston-centerless.html">Boston Centerless</a>
     <a href="open-design-project.html">Open Design Project</a>
-    <a href="about.html">About</a>
+    <a href="mae3260.html">MAE 3260</a>
     <a class="current" href="mae3270.html">MAE 3270</a>
+    <a href="about.html">About</a>
   </div>
 
   <main>
