--- a/mae3270.html
+++ b/mae3270.html
@@ -18,6 +18,7 @@
     <a href="open-design-project.html">Open Design Project</a>
     <a href="mae3260.html">MAE 3260</a>
     <a class="current" href="mae3270.html">MAE 3270</a>
+    <a href="mae3230.html">MAE 3230</a>
     <a href="about.html">About</a>
   </div>
 
