--- a/mae3230.html
+++ b/mae3230.html
@@ -30,7 +30,7 @@
     </div>
     <div class="row">
       <div class="padded">
-        <p>My group disassembled a chainsaw for the Fluid Mechanical Dissection. I played a large part in dissecting the chainsaw; the most difficult aspect was taking the flywheel off. Once we achieved that, we were able to take measurements of the piston and carburetor, which was the focus of our video. For the video, I worked with Michelle Mobius on a script for piston in the two-stroke engine and the flywheel. I calculated the change in pressure from the piston. We recorded our sections of the video together. I enjoyed this project because it allowed me to apply my knowledge of fluid-mechanics to a real machine, which allowed me to deepen my understanding of concepts and connect them to new ones.</p>
+        <p>My group disassembled a chainsaw for the Fluid Mechanical Dissection. I played a large part in dissecting the chainsaw; the most difficult aspect was taking the flywheel off. Once we achieved that, we were able to take measurements of the piston and carburetor, which was the focus of our video. For the video, I worked with Michelle Mobius on a script for the piston in the two-stroke engine and the flywheel. I calculated the change in pressure from the piston. We recorded our sections of the video together. I enjoyed this project because it allowed me to apply my knowledge of fluid-mechanics to a real machine, which allowed me to deepen my understanding of concepts and connect them to new ones.</p>
       </div>
     </div>
   </main>
